# goal_state_agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  training.py
agents/: __init__.py  goal_state_agent.py
configs/: __init__.py  config.py
core/: __init__.py  layers.py  losses.py
examples/: __init__.py  analyze_learning_dynamics.py  compare_lr_strategies.py  create_validation_plots.py  test_achievement_gated_plasticity.py  test_early_stopping.py  test_optimal_config.py  test_variance.py  train_cartpole.py  validate_replay_buffer.py  validate_research_findings.py  visualize_lr_comparison.py  visualize_training.py
research_notes/: 2024-12-25_replay_buffer_investigation.md  2024-12-26_architecture_alternatives.md  2024-12-26_lr_strategies_investigation.md  2024-12-26_validated_findings.md  2024-12-28_plasticity_experiments.md
utils/: __init__.py  optimizers.py  plasticity.py  replay_buffer.py
visualization/: __init__.py  plots.py  video.py
